# sccmhound-py

./: .gitignore  README.md  customqueries.json  pyproject.toml  requirements.txt
sccmhound/: __main__.py  cli.py  config.py
sccmhound/auth/: credentials.py
sccmhound/checks/: mssql_epa.py
sccmhound/collectors/: adminservice_collector.py  wmi_collector.py
sccmhound/connectors/: adminservice.py  wmi.py
sccmhound/discovery/: ldap_discovery.py  smb_probes.py
sccmhound/factories/: group_factory.py  user_factory.py
sccmhound/ldap/: connection_manager.py  sid_resolver.py
sccmhound/models/: bloodhound.py  sccm.py
sccmhound/output/: json_writer.py  opengraph_writer.py
sccmhound/resolvers/: domains.py  local_admins.py  sessions.py  users_groups.py
sccmhound/utils/: helpers.py
tests/: conftest.py  test_cli.py  test_credentials.py  test_discovery.py  test_helpers.py  test_json_writer.py  test_models.py  test_opengraph.py  test_resolvers.py
