[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sccmhound"
version = "0.1.0"
description = "Python BloodHound collector for Microsoft Configuration Manager (SCCM/MCM)"
requires-python = ">=3.10"
dependencies = [
    "impacket>=0.12.0",
    "ldap3>=2.9.1",
    "requests>=2.31.0",
    "requests-ntlm>=1.2.0",
    "requests-kerberos>=0.14.0",
]

[project.scripts]
sccmhound = "sccmhound.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "responses>=0.25.0",
    "ruff>=0.3.0",
    "mypy>=1.9",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a live SCCM instance",
]
